tests/config_module_system_node_resolve_dirname_misuse/config_module_system_node_resolve_dirname_misuse.exp
Error ---------------------------------------------------------------------------------------------- subdir/test.js:3:17

Cannot resolve module `foo/bar`.

   3| import bar from 'foo/bar';
                      ^^^^^^^^^



Found 1 error
